# TorchANN

./: LICENSE  README.md  count_lines.sh
auto_train/: README  auto_train.py
auto_train/scripts/: TorchANN_wrap_python2.py  VASP-poscar2lammps.awk  lasp.external.sh  run.sh
c/: .gitignore  Utilities.c  Utilities.cpp  a.out  build_neighbour_list.c  build_neighbour_list.cpp  build_neighbour_list_type.c  compute_derivative_sym_coord_to_coord.c  conv  convert_coord.c  convert_coord.cpp  count_types.c  extend_max_atoms.c  extend_max_atoms.cpp  main.c  main.cpp  main_coord_only.cpp  main_partial.cpp  main_predict.cpp  makefile  read_parameters.c  read_parameters.cpp  read_system.c  read_system.cpp  save_to_file.c  save_to_file.cpp  struct.h  template_func.h
c/test/: all_frame_info.bin.temp  box.raw  coord.raw
c/train_nompi/: CMakeLists.txt  how_to_build_and_run  struct_train_nompi.h  train_nompi.cpp  train_nompi_Utilities.cpp
from_LASP_H2O/: H2O.input  H2O.pot  LASP.raw  aaa  adjust_factor  all_frame_info.bin.temp  lasp.in  lasp.out  release_H2O.pot
from_LASP_H2O/SavePot/: pot_in_step-100  pot_in_step-120  pot_in_step-140  (+6 more)
python/: class_and_function.py  train.py  train_noclassfy.py  train_noclassfy_lbfgs.py
test/: energy.raw  force.raw  type.raw
test_1g/: LASP.raw
test_2/: coord.raw  type.raw
test_small/: README  aaa  all_frame_info.bin.temp  coord.raw  expand  expand_sort  force.raw  helgrind.log1  helgrind.log2  leak-check20190331-2  neighb  type.raw
test_very_small/: coord.raw  energy.raw  force.raw
test_very_small_2_diff/: force.raw  type.raw
(+275 files in other folders)
